# ChangeLog for app-emulation/docker
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/ChangeLog,v 1.5 2013/11/23 23:13:28 gregkh Exp $

*docker-0.6.7 (23 Nov 2013)

  23 Nov 2013; Greg Kroah-Hartman <gregkh@gentoo.org> +docker-0.6.7.ebuild:
  0.6.7 version bump

*docker-0.6.6 (11 Nov 2013)

  11 Nov 2013; Greg Kroah-Hartman <gregkh@gentoo.org> +docker-0.6.6.ebuild:
  0.6.6 version bump

*docker-0.6.5 (31 Oct 2013)

  31 Oct 2013; Greg Kroah-Hartman <gregkh@gentoo.org> +docker-0.6.5.ebuild:
  version bump to 0.6.5

*docker-0.6.3-r1 (05 Oct 2013)

  05 Oct 2013; Greg Kroah-Hartman <gregkh@gentoo.org> +docker-0.6.3-r1.ebuild:
  add dependancy on app-arch/xz-utils as it is needed

*docker-0.6.3 (25 Sep 2013)

  25 Sep 2013; Greg Kroah-Hartman <gregkh@gentoo.org> +docker-0.6.3.ebuild,
  +files/docker-r2.confd, +files/docker-r2.initd, +files/docker.initd,
  +files/docker.service, +metadata.xml:
  initial docker ebuild taken (with permission) from git@github.com:tianon
  /docker-overlay.git