@@ -7,5 +7,6 @@ EBUILD docker-0.6.3.ebuild 4404 SHA256 2e38617c57dfe48c270f026c7870de2b83abcfb4d
 EBUILD docker-0.6.5.ebuild 3663 SHA256 b6caa9294deb3507c7348b7754189249918442a953bced569d17874ba62e7464 SHA512 940e029632d8bd9c4e8cff57fa39607479e60546250d690c5eed4fbba5b603c4f1b6ef73ea79855d7bfb3c12d7797d091aa38fb368c985b038e5ab6d6385a846 WHIRLPOOL 0be135887e0bdb0820d8f98f7c4997981548c3a3c648da8048d7be349c0aa62c572d6f0df8259164909523ef471a7e7832ab7c738990da24e2c6420c6acac9ef
 EBUILD docker-0.6.6.ebuild 3663 SHA256 226206b737be09b63fc37446b519f36939fef2324247a5062a90bd565aef2d0c SHA512 794851abd01a565d74fb60ce03ad27094920ce2bbbb11a13420c9810f708659d575f81d98e62eea721da1dc29b6bc63d25f43c5a9f2b30dfe757b6fa71e607a3 WHIRLPOOL e53e8ca71d2c19a6fdbaceb3854d7bdfbe850e742d97c9430999fb8c43bd8a4b54bc54d74aa859d32e9994ae814e7b523bf92689459115928ed3199aa685ffa5
 EBUILD docker-0.6.7.ebuild 3693 SHA256 600a6fdade431c283c4229e6740020925f4af4c7309cc43924f0c0e0c60d6b96 SHA512 317a5235cf5a1b39b3aef3535d3564422e839e1279d7d6574e0bbcbe65906547c5475db91fb14ec7a53520c5594564f0eb9f4ae770aa312ffcd632e286395b7c WHIRLPOOL a935d52fd2d42d241c5c33f9665797cc8e730c26794d7a6304fd8420ecf19397cacb30b76b6a9fa42f75017d3ef173d1e74b1d4aec7029616d71c44bfaa1ddd5
-MISC ChangeLog 1076 SHA256 fb58ca8f6c7de5667ef2b4f01a9533c432cbdf6eb303f7943e813162ebd14dfc SHA512 4a21dcc8e9594db3d3424fda82ee2658c53014461ecb888c771b4b64fda0450e59450d6656683d1471c5e8941a114210db30d33e219924c0831ab720da9319ce WHIRLPOOL 93ffef758244fce5180fd9d283323019e7d8959549b2afd8d384679cd3d8953a0f36b09fdd4c5e034859071a53bb138831a5368d87cd4996e047ad98aad83c65
-MISC metadata.xml 560 SHA256 8e6641818a9c28ac022101d80fce792b37a82e5066766fc26cf0ae89e610de22 SHA512 327d1e6e795869d1b675bf987b2f85551604cffeb79b861158fc9442c42fc052f95a124095d052f40bf90ef7add517df1f7c0f524062f4bfe95e0eeeed580e1b WHIRLPOOL 11fb56222b24fd992c3996975ece86b9a3e91c64782a5d36b713ac115b91f8e478d0aa62733d1421bbcf73bb519e3a8e3cfea6727472995d836b79e3beb1f843
+EBUILD docker-0.7.0.ebuild 3846 SHA256 3fe946e872d4dea18334587f756069ecd533be6dbd1bf59c49db34222bd8e44e SHA512 736266d54c92c34e487392aa46477d2298ce96159205f00786bffdf107a3b1b5a88da4e5ae0ddca8fc29d4ebb09dcc4d06d635273dcf72ffceddfc79d9462fe7 WHIRLPOOL 3d0a2596129c1ae2f5af007cf0caa13e9a0b949bf30344fa0eb7f63ab820d9c4ac505830573dd14925d4c010d571455012690475239ad7efb92850b0c125f715
+MISC ChangeLog 1218 SHA256 c3a831b8cee688d22faeafb3337b4cc5b96f43d87377c50318fae5e3d8592fb5 SHA512 644bd9499f2a1b2d078cb78a988b7b01115a84dec2c03409de33e4ca2d2e6b5ded0d7d99e668bc0947c99d37c5cab3e0c759e48a4163dc987a50ac3daca214a7 WHIRLPOOL b70eb91b10d48d496c7128e74d073ee5c1f29fc744e3f784e73c08b86f42eced91ed941d55b4ad0108465c7e04a5a1d7b6bddaba9b84dc63ba91f943c05e6656
+MISC metadata.xml 839 SHA256 5404323c6318eea6a2ad31f370ee8b698503c421532ed6341062262bf8b4d243 SHA512 afde4228cad6131fec7d91ecd85829f3917497fd67618137b008993912c564159855c1ddc054343bc3f49b0bd27610d5daf5afede3d1a4a81ac14f7e7638ca3f WHIRLPOOL 71ed16244de522827c9beab96b76b211a00ddbb750c1080074951522691424cebf08af116119e5ebdb1a98823e95735dfb27586396846dd9c5ff2a9f1dac6254
