@@ -8,8 +8,18 @@
 		scale, in production, on VMs, bare metal, OpenStack clusters, public
 		clouds and more.
 	</longdescription>
-	<maintainer>
+	<maintainer status="active">
 		<email>admwiggin@gmail.com</email>
 		<name>Tianon</name>
 	</maintainer>
+	<use>
+		<flag name="aufs">
+			Enables dependencies for the "aufs" driver, including necessary
+			kernel flags.
+		</flag>
+		<flag name="device-mapper">
+			Enables dependencies for the "device-mapper" driver, including
+			necessary kernel flags.
+		</flag>
+	</use>
 </pkgmetadata>
