@@ -18,23 +18,23 @@ EBUILD ibus-1.4.1.ebuild 4073 SHA256 9db71a96c8bfb8cd8cdfd1286d5a6ba19b7e6b82a3d
 EBUILD ibus-1.4.2.ebuild 3443 SHA256 a5be7819f46e95e533a4198089f4a83de2d4735919fcb40d7a6ce5f832122478 SHA512 6a85b1f6df59cf70084cdef5c1905b0e63f86b2851c9bac5f77fedd05ba9a97d932f7299a29690a42c4c4f5857a703a66b08b2caa218c88b86a6efd9b99e084d WHIRLPOOL ca5eba00ce47c86cb44123cb60bd68f7da64d7befd4c703f45961e2666995deb19a865f5cc56bf463ca3a0526d3f901f38fee75b2b5d2b75819c81bd11c38310
 EBUILD ibus-1.5.2.ebuild 4474 SHA256 368cf6ecde0fdbaf96b40f286283c9745cd9b6eeb3a68c90cf639f31a2dc7ee4 SHA512 4b1d7b8669e7c1bb1992b834171f9622263c50e28ebdf134beeca505825b83a309ba5474be2ae067457bebf7090e5525c709434ac134eb10db877e711ea16981 WHIRLPOOL 57fa98557e6e81dfda14013a1a0a85827d24f7176deb753ee21ab639ccdbe0cf5ea8fcda7c1126d79b16b33132f995267e7d4a5b01ad2be5625cf14f29918a61
 EBUILD ibus-1.5.3.ebuild 4474 SHA256 5e13599ed9c1220eeb79cf1801ebc0bbaa42a3422a5d1b182532b528e35dd4f0 SHA512 16f5a8e8ec5f7295afd0d20e1f66c15d69eb1cf1ab39ccbfb3a251575b697ca152d1ff7eb545211f1d41d788908d552e6b47522b9152641032f130021b561fed WHIRLPOOL 44642095c33f2a546b2db39dc8651ba787b18b247bc8d2b6c48a15dc04ddd526636bd6f265332a8f81d277ddb2aa7e3d84ef696c4d261a7b1eb6ad3182dca328
-EBUILD ibus-1.5.4-r1.ebuild 4651 SHA256 7b4654f1391a0964fecbd3821e2bdb92da904ccdf05843bf5429034c4a8061dd SHA512 0905745e07186b137666e2233c66931bff0a9afc074e477f3c3487b32b0a60fe1d4a3fbcbb8edccc98c82375a2be30c2d5afe5c53870d8a4a078c5b0c005cbc9 WHIRLPOOL f4f4638c473a9e0ef9ab62d4f1dd8904f1d26bb24e29d39124c928070792c278521333f9d8390b7e0176b95558178979107d740c9021f286d01cd558123ecbf9
-MISC ChangeLog 21237 SHA256 fd389e524117d17d19bd63a5fb7943776153ac60aa4722abfd17cffabb2600b8 SHA512 32723c869e3cfccc8eb3d5914dbdbf06d954f0650cbce3d06895ddda34637bb9dcd2061657170ed6a036cee6a14cef12597256cf8665cd5cd13f99e6f929caa9 WHIRLPOOL 163ab131175ca487a3f8b6bcc2e3c157148a969920d5264ece6f41cdce0f9d38b6ae24eeedaba0ffd73faee40bcb36abd4e4d93a8f1ff510f720e5c2f9872289
+EBUILD ibus-1.5.4-r1.ebuild 4443 SHA256 b38dd2b1db9aac8bb3729f06dbbf68424483f1663b733e8a43547c54baf41cfb SHA512 bf9e140a113d7b902ef2b26de979df9f836f5abbe8c79da81e06ecc072c656b546c5eb31484ce3cec54bf78b6d9bd3a2872eaa2b477babb8297d19d1a3c944a6 WHIRLPOOL d61fc2211d8ecf82062b6c5cbc92720026528fd186f0616852a4e31dd50cb7f9a14ea1994d9fc3e5d2866b553c2bca7362c5044001f82564b16b5f49960eca3d
+MISC ChangeLog 21334 SHA256 a92418be9604d844d1fbc3243748fecaef2da3c20dae83e265a6d86f1421cd83 SHA512 9e5653b0efa70cb97b94a5694c2dfff2f78fb70889b93dd6413a2d8302c8b568bbb8434dd04d648d7912fabe7e885a2173485f075d05195dc60c91f1fc79f70b WHIRLPOOL 69b6a17ec960e88c829a6749419a41107f1bbead7993197cc3c1529710ba552371eb35230bb2024febb1c66a672a824e26b60bc74500d5515898ff01f3de2519
 MISC metadata.xml 984 SHA256 3fc098fc1705fd2415044e6fdba35555bdecad080c056ec418c7d53ddb8738c4 SHA512 b768faa0466a08629bd416b575c35b0e7868972d16878e7da79da5837549cbe4a5e5772a06117e7536f3b3b2d2c417afac14e7639747a9a2a1d220b297adffc3 WHIRLPOOL a3050b1d6a123b7a82d067d6fbdb35c941ac6fd902d58ccbb0a4a339f319e67b2dc8ad2f3fc1af521dd981fc3af41c9c4242a15235847856c1feb1f03e4bdc61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJSiGTeAAoJEDYO1FT4VRUUVVcQAIddC26v22hblCWG5C4qdCmQ
-MPgphuxbxSe53fq1q5faeu2s9g4Dp1qQ1VBdYpjM6sTKgk1DLgaWHb6z4xkS1eYg
-jk49BPM4MBMbFJ0sZYL0Kb4Ivvn+rrKP+aG+PomAQAdEdjVjN13N4Ye94R7105DM
-WPWut7gUJMt5HErySw1zfv8/y4XfRFG0ZhwL7kPLF53fxpPncult5tMJHYr3IpsK
-wHmHCyBRd4KZDaF5JLB+ir6j0BHyKkJqkWu9T4MbI2Sf/LYrkSAVh2Ges3yxCrQE
-hn898aT5wctvIw/7vyakq5FVmom3DGa+OK4X0iyZFsvOb6/TooOt2ryqxi/j8Got
-J49cka+PY7PHFwsvDREsZT+Sc5XOpFPTXYZYpgIOrIrYqw5E156P1IFtk8GilLwu
-PB5FDEDrRdplXxCoW7w/jWJW2WsKFa8CAK5GdR/ORo9e1h/M7uqe9wQbn4oys7oz
-DloUoZ3YKoLB0dg6BKJ3/8zWeODlWE2EJh8ycC6SkIGfsmqnLm9/VnIP6veV3NyO
-uNGjaXGzicnou8aBLWff75syqmPKLPtJiinhf2a0EmSoUjUqjQ/oV1l9/njLQnEm
-fEQjied+NqX8e0p1c9ibXKclnWEi3i5LK7IQFtt3Ze3ebef+Ht/L/qalZMZ6kfVr
-lBKj3M9TnjwiHIJkgaHa
-=h+PW
+iQIcBAEBCAAGBQJSlLxCAAoJEDYO1FT4VRUUscIP/RUiNBEyFsrSMD7fvUikpqRH
+ktYtuN70XrOw6uvjWiH6K3aUow4ObsWbW4O2yUlmFXS9FXy7AajBhm1+3lwHLhQM
+uPxDt7wAnAswo904IKaG6yJCgFUqBpby9q0tKwilWTii43STQcSi/8bupHhfh3c4
+0SUmDCR/0PyUTGPdwkIGsp0jcrx8KL05F7+F3H7gfzoltArJThlxMmPaaIK6hkE2
+SKmSwEdlJYPp52FkSO2HTDVO1NNeaLAPf/EzLT+m3q9admlp21BiP+P30PsvEVpY
+dD3KVc8rR558Gl5r8L5wVfEWHpqRT6ENxut62REDlLRPtupmckccWZxvogPpRpIm
+Gy1krx0Xu57sq2dPYMB8kkJTMw+ZbQKYKlVg3zL+Qu2phHF56TSVok5QRpwjdoeT
+/EdMHruhwvf23v2Y9QBOF1vqgJnvcXb50CPyaBI4EPf43M5Gccf0LxttRfMMwATD
+wLrGx5tcWOD4F+L464dcxXMAORDclPeY/3fRozio3qBRL17CEuGTjLoXuqZL/E5n
+LRzBl4HR9M6e13shEucrc1iK4jSvcUvABDD9KVi+6JwO0OVJVyhgmiFLUYCDjI5y
+0Ri3B/Xg+yOsOQZ70n9DLGAz9tssl7NiEkSHPXHbZn6ZhzzjpOEqee5ojO31g282
+1Ni42YMzle2UaDhuiUV3
+=SwCU
 -----END PGP SIGNATURE-----
