@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile install postinst setup unpack
+DEPEND=>=dev-db/sqlite-3.7.9:3 device-mapper? ( sys-fs/lvm2[thin] ) >=dev-lang/go-1.1.2 dev-vcs/git dev-vcs/mercurial doc? ( dev-python/sphinx dev-python/sphinxcontrib-httpdomain ) dev-vcs/git virtual/pkgconfig
+DESCRIPTION=Docker complements LXC with a high-level API which operates at the process level.
+EAPI=5
+HOMEPAGE=http://www.docker.io/
+IUSE=aufs +device-mapper doc vim-syntax
+KEYWORDS=~amd64
+LICENSE=Apache-2.0
+RDEPEND=>=dev-db/sqlite-3.7.9:3 device-mapper? ( sys-fs/lvm2[thin] ) !app-emulation/docker-bin >=app-arch/tar-1.26 >=sys-apps/iproute2-3.5 >=net-firewall/iptables-1.4 >=app-emulation/lxc-0.8 >=dev-vcs/git-1.7 >=app-arch/xz-utils-4.9 aufs? ( || ( sys-fs/aufs3 sys-kernel/aufs-sources ) )
+RESTRICT=strip
+SLOT=0
+_eclasses_=bash-completion-r1	d339dd40b2014cf1edba8592580eef42	eutils	4878e7f88afc0ba0866ac112190b0fd4	git-2	2027b81a576527fa16bece425941e094	git-r3	f089608c770d9ad72a2c92b547d2b20d	linux-info	a9cbd6bbe2b28166e403321882f3c73c	multilib	892e597faee02a5b94eb02ab512e7622	systemd	9f063b2cc19c5e8030911372aa246c4e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	a8a3963967d6140be9a14b08bb8f047f
+_md5_=758f63a7ba3fc55d6c184fcbd76ba53b
