@@ -1,6 +1,12 @@
 # ChangeLog for app-emulation/docker
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/ChangeLog,v 1.5 2013/11/23 23:13:28 gregkh Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/docker/ChangeLog,v 1.6 2013/11/26 15:17:48 gregkh Exp $
+
+*docker-0.7.0 (26 Nov 2013)
+
+  26 Nov 2013; Greg Kroah-Hartman <gregkh@gentoo.org> +docker-0.7.0.ebuild,
+  metadata.xml:
+  add 0.7.0 release
 
 *docker-0.6.7 (23 Nov 2013)
 
